--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,7 @@
   "license": "BSD 3-clause",
   "authors": [
     {
-      "name": "Simon Micheneau",
+      "name": "SimonDevelop",
       "email": "contact@simon-micheneau.fr"
     }
   ],
