Correction composer.json

--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,7 @@
     "pagination"
   ],
   "homepage": "https://github.com/SimonDevelop/array-organize",
-  "license": "BSD 3-clause",
+  "license": "MIT",
   "authors": [
     {
       "name": "SimonDevelop",
