--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,6 @@
 language: php
 
 php:
-  - 5.6
   - 7.0
   - 7.1
   - 7.2
@@ -11,5 +10,4 @@ install:
   - composer install
 
 script:
-  - ./vendor/bin/phpcs -s
-  - ./vendor/bin/phpunit --colors
+  - composer test
