--- a/.github/workflows/php.yml
+++ b/.github/workflows/php.yml
@@ -20,7 +20,7 @@ jobs:
         with:
           php-version: ${{ matrix.php-versions }}
           extensions: mbstring, intl, zip
-          coverage: none
+          coverage: xdebug
 
       - name: Check PHP Version
         run: php -v
@@ -37,5 +37,20 @@ jobs:
       - name: Install dependencies
         run: composer install
 
+      - name: Run phpcs
+        run: composer phpcs
+
+      - name: Run phpstan
+        run: composer phpstan-src && composer phpstan-tests
+
       - name: Run test
-        run: composer test
+        run: composer phpunit
+
+      - name: Upload coverage to Codecov
+        uses: codecov/codecov-action@v1
+        with:
+          token: ${{ secrets.CODECOV_TOKEN }}
+          file: ./coverage.xml
+          flags: tests
+          name: codecov-umbrella
+          fail_ci_if_error: true
